# oox

./: CMakeLists.txt  Makefile  README.md  test_oox.cpp  test_oox_tbb.cpp
benchmarks/: CMakeLists.txt  bench_fib.cpp  bench_loops.cpp  harness_parallel.h  rapid_start.h
oox/: oox.h
tests/: CMakeLists.txt  test_oox.cpp
